--- a/src/components/Project.css
+++ b/src/components/Project.css
@@ -6,7 +6,7 @@
 }
 
 .project-card {
-    flex-basis: 225px;
+    flex-basis: 350px;
     box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
     display: flex;
@@ -16,7 +16,7 @@
     background-color: white;
 }
 
-.project-card > img {
+.project-card img {
     width: 100%;
     height: auto;
     align-self: center;
@@ -27,17 +27,6 @@
 .project-card > h3 {
     font-weight: 700;
     font-size: 18px;
-}
-
-.a {
-   background-color: aquamarine; 
-   justify-content: center;
-}
-
-.btn {
-    justify-content: center;
-    border-radius: 12%;
-    background-color: rgb(192, 154, 227);
 }
 
 .info-group {
